fix q4 overlapping opacities

--- a/q4/www/css/styles.css
+++ b/q4/www/css/styles.css
@@ -35,11 +35,10 @@ body {
 
 /* Changed for h1 and h10 */
 header {
-  background-color: #d24a88;
+  background: rgba(210,74,136,0.9);
   padding: 1px;
   color: white;
   text-align: center;
-  opacity: 0.9
 }
 
 /* Navigation bar*/
@@ -48,8 +47,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: white;
-  opacity: 0.9
+  background: rgba(255,255,255,0.9);
 }
 
 li {
@@ -102,6 +100,7 @@ h2 a:hover {
 }
 
 h3 {
+  font-size: 1.15em;
   color: white;
 }
 
@@ -145,14 +144,13 @@ button:hover {
 .left-column {
   float: left;
   width: 50.0%;
-  background: #423131;
+  /*background: rgba(66,49,49,0.95);*/
   padding: 20px;
-  opacity: 0.95;
-  /*border-right-style: dotted;
-  border-width: medium;*/
+  /*border-right-style: dashed;
+  border-width: thick;*/
 }
 
-.left-column img {
+.one-column .left-column img {
   width: 100%;
 }
 
@@ -160,13 +158,12 @@ button:hover {
   float: left;
   padding: 20px;
   width: 50.0%;
-  background-color: #423131;
-  opacity: 0.95;
+  /*background: rgba(66,49,49,0.95);*/
   border-left-style: dashed;
   border-width: thick;
 }
 
-.right-column img {
+.one-column .right-column img {
    width: 100%;
 }
 
@@ -174,8 +171,7 @@ button:hover {
   float: left;
   padding: 20px;
   width: 100.0%;
-  background-color: #423131;
-  opacity: 0.95;
+  background: rgba(66,49,49,0.95);
 }
 
 .one-column img {
@@ -191,12 +187,11 @@ section:after {
 
 /* Changed from the original color to this to make them cute */
 footer {
-  background-color: #d24a88;
+  background: rgba(210,74,136,0.9);
   padding: 10px;
   text-align: center;
   font-size: 15px;
   color: white;
-  opacity: 0.9;
 }
 
 footer a:hover {
